Added config options: - Teleport search radius - Countdown location - Sound effects - Default game options - Weight presets (closes https://github.com/HopperElec/RandomEventsPlugin/issues/6)
Added share scope, determining how much of an event is shared with other players

Added alternative countdown locations

Renamed "timer" to "countdown"

Made event types into classes which must be registered (closes https://github.com/HopperElec/RandomEventsPlugin/issues/20)

Updated README to reflect RandomStructureEvent, the registrable nature of event types and the config options

Modified some messages sent to players

Generally lots of refactoring, added annotations where appropriate

Fixed:
- Events still occur on players who have left, even if they rejoin
- Ensured items are enabled in the given world